Project 003 Custom Profile CapSense RGB LED/PSoC/CapSenseRGB/CapSenseRGB.cydsn/CortexM0/ARM_GCC_493/Release/REBUILD.log
--------------- Rebuild Started: 10/09/2015 09:55:45 Project: CapSenseRGB, Configuration: ARM GCC 4.9-2015-q1-update Release ---------------
Deleting file ".\CapSenseRGB.cycdx"
Deleting file ".\CapSenseRGB.svd"
Deleting file ".\CapSenseRGB.rpt"
Deleting file ".\CapSenseRGB_timing.html"
cydsfit.exe -.appdatapath "C:\Users\danielpi\AppData\Local\Cypress Semiconductor\PSoC Creator\3.3" -.fdsnotice -.fdswarpdepfile=warp_dependencies.txt -.fdselabdepfile=elab_dependencies.txt -.fdsbldfile=generated_files.txt -p "Y:\repos\PSoC-4-BLE-Experiments\Project 003 Custom Profile CapSense RGB LED\PSoC\CapSenseRGB\CapSenseRGB.cydsn\CapSenseRGB.cyprj" -d CY8C4247LQI-BL483 -s "Y:\repos\PSoC-4-BLE-Experiments\Project 003 Custom Profile CapSense RGB LED\PSoC\CapSenseRGB\CapSenseRGB.cydsn\Generated_Source\PSoC4" -- -yv2 -q10 -ygs -o2 -v3 -.fftcfgtype=LE
Elaborating Design...
HDL Generation ...
Synthesis ...
Place and Route ...
Tech mapping ...
Analog Placement ...
Analog Routing ...
Analog Code Generation ...
Digital Placement ...
Digital Routing ...
Bitstream Generation ...
Static timing analysis ...
API Generation ...
Dependency Generation ...
Clean Temporary Files ...
arm-none-eabi-gcc.exe -mcpu=cortex-m0 -mthumb -Wno-main -I. -IGenerated_Source\PSoC4 -Wa,-alh=.\CortexM0\ARM_GCC_493\Release/main.lst -g -D NDEBUG -Wall -ffunction-sections -Os -ffat-lto-objects -c .\main.c -o .\CortexM0\ARM_GCC_493\Release\main.o
.\main.c: In function 'UpdateRGBled':
.\main.c:19:1: error: parameter 'deviceConnected' is initialized
 uint8 deviceConnected = FALSE;
 ^
.\main.c:34:1: error: expected '=', ',', ';', 'asm' or '__attribute__' before 'int'
 int main()
 ^
.\main.c:47:25: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void initializeSystem() {
                         ^
.\main.c:79:61: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void bluetoothEventHandler(uint32 event, void * eventParam) {
                                                             ^
.\main.c:113:25: error: expected '=', ',', ';', 'asm' or '__attribute__' before '{' token
 void UpdateRGBled(void) {
                         ^
In file included from .\main.c:14:0:
./main.h:18:6: error: old-style parameter declarations in prototyped function definition
 void UpdateRGBled(void)
      ^
.\main.c:137:1: error: expected '{' at end of input
 }
 ^
The command 'arm-none-eabi-gcc.exe' failed with exit code '1'.
--------------- Rebuild Failed: 10/09/2015 09:56:02 ---------------
